# bazel-a-b-go-tool

a/: BUILD.bazel  WORKSPACE  go.mod  go.sum  main.go  repositories.bzl
b/: BUILD.bazel  WORKSPACE  go.mod
